# kaybee-ui

./: .env.yaml  .gitignore  Dockerfile  README.md  cloudbuild.yaml  pyproject.toml
app/: agent_service.py  agraph.py  knowledge_graph_service.py  main.py  oauth_secrets.py  stt.py
jules-scratch/verification/: verify.py
